Fixed some problems with the Jindium context.

--- a/Jindium2/Jindium2.csproj
+++ b/Jindium2/Jindium2.csproj
@@ -16,7 +16,7 @@
     <PackageReleaseNotes>Beta Version of Jindium2</PackageReleaseNotes>
     <AssemblyVersion>2.0.1</AssemblyVersion>
     <FileVersion>2.0.1</FileVersion>
-    <Version>2.0.1</Version>
+    <Version>2.0.1-alpha</Version>
   </PropertyGroup>
 
   <ItemGroup>
