--- a/Jindium2/Jindium2.csproj
+++ b/Jindium2/Jindium2.csproj
@@ -14,9 +14,9 @@
     <Description>A server-side web platform designed for the creation of modern web-based applications using C#. It was designed to enable developers to build extremely fast and dynamic websites, applications, and API services.</Description>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <PackageReleaseNotes>Beta Version of Jindium2</PackageReleaseNotes>
-    <AssemblyVersion>2.0.1</AssemblyVersion>
-    <FileVersion>2.0.1</FileVersion>
-    <Version>2.0.1-alpha</Version>
+    <AssemblyVersion>2.0.2</AssemblyVersion>
+    <FileVersion>2.0.2</FileVersion>
+    <Version>2.0.2-alpha</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -24,6 +24,10 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="WebMarkupMin.Core" Version="2.9.0" />
   </ItemGroup>
 
 </Project>
