--- a/Jindium2/Jindium2.csproj
+++ b/Jindium2/Jindium2.csproj
@@ -14,10 +14,16 @@
     <Description>A server-side web platform designed for the creation of modern web-based applications using C#. It was designed to enable developers to build extremely fast and dynamic websites, applications, and API services.</Description>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <PackageReleaseNotes>Beta Version of Jindium2</PackageReleaseNotes>
-    <AssemblyVersion>2.0.2</AssemblyVersion>
-    <FileVersion>2.0.2</FileVersion>
-    <Version>2.0.2-alpha</Version>
+    <AssemblyVersion>2.0.5</AssemblyVersion>
+    <FileVersion>2.0.5</FileVersion>
+    <Version>2.0.5-alpha</Version>
+    <Copyright>© Copyright 2022 Jack Kimmins. All rights reserved.</Copyright>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\JindiumLogo.png">
@@ -27,6 +33,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="WebMarkupMin.Core" Version="2.9.0" />
   </ItemGroup>
 
